ios numerics fix

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1078,3 +1078,10 @@ h1, h2, h3, h4
 
   .nav-item-border
     display: none
+
+  .ordered-steps
+    .ordered-step-item
+      .step-number
+        width: 15%
+      .step-content
+        width: 85%
