--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -228,21 +228,21 @@ h1, h2, h3, h4
       vertical-align: middle
       height: 100px
 
-.activity-title
-  margin-right: 90px
+// .activity-title
+//   margin-right: 90px
 
-.activity-action-btn
-  .btn
-    position: absolute
-    width: 80px
-    bottom: 0
-    right: 0
-    padding: 5px
-    margin-bottom: 20px
-    .btn-count
-      font-size: 20px
-    .btn-text
-      font-size: 12px
+// .activity-action-btn
+//   .btn
+//     position: absolute
+//     width: 80px
+//     bottom: 0
+//     right: 0
+//     padding: 5px
+//     margin-bottom: 20px
+//     .btn-count
+//       font-size: 20px
+//     .btn-text
+//       font-size: 12px
 
 #video-ingredient-unit
   min-height: 600px
