--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -9,9 +9,7 @@
   - if params[:q]
     - if @results.blank?
       %h4= "There were no results for '#{params[:q]}' but maybe you'll like these recipes:"
-      .row.search-results
-        = # TODO Remove unused partial
-        / = render partial: 'result_item', collection: @noresults, :as => :item
+      .row.search-results.gallery
         - @noresults.each do |result_item|
           .span4
             = link_to result_item.searchable do
@@ -21,8 +19,6 @@
       %h4= "Results for '#{params[:q]}':"
       = paginate @results
       .row.search-results.gallery
-        = # TODO Remove unused partial
-        / = render partial: 'result_item', collection: @results, :as => :item
         - @results.each do |result_item|
           .span4
             = link_to result_item.searchable do
@@ -32,9 +28,7 @@
 
     - if @related_results && @related_results.any?
       %h4 Related Results:
-      .row.search-results
-        = # TODO Remove unused partial
-        / = render partial: 'result_item', collection: @related_results, :as => :item
+      .row.search-results.gallery
         - @related_results.each do |result_item|
           .span4
             = link_to result_item.searchable do
