--- a/app/views/courses/_syllabus.html.haml
+++ b/app/views/courses/_syllabus.html.haml
@@ -5,16 +5,16 @@
     - when 0
       - module_number += 1
       .nested-0
-        %h4= "Module #{module_number}: " + inclusion.activity.title
+        %h4= "Module #{module_number}: " + inclusion.activity.title.html_safe
     - when 1
       .nested-1
         - if inclusion.activity.published?
-          = link_to inclusion.activity.title, course_activity_path(course, inclusion.activity)
+          = link_to inclusion.activity.title.html_safe, course_activity_path(course, inclusion.activity)
         - else
-          = inclusion.activity.title
+          = inclusion.activity.title.html_safe
     - when 2
       .nested-2
         - if inclusion.activity.published?
-          = link_to inclusion.activity.title, course_activity_path(course, inclusion.activity)
+          = link_to inclusion.activity.title.html_safe, course_activity_path(course, inclusion.activity)
         - else
-          = inclusion.activity.title
+          = inclusion.activity.title.html_safe
