--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -983,6 +983,10 @@ h1, h2, h3, h4
     width: 300px
     height: 336px
 
+  .activity-description-wrapper
+    .activity-description
+      height: 140px
+
 /* Portrait tablet to landscape and desktop */
 @media (min-width: 768px) and (max-width: 979px)
   #hero-container
@@ -1004,6 +1008,10 @@ h1, h2, h3, h4
 
   .nav-item-border
     display: none
+
+  .activity-description-wrapper
+    .activity-description
+      height: 160px
 
 /* Landscape phone to portrait tablet */
 @media (max-width: 767px)
