--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -408,6 +408,10 @@ h1, h2, h3, h4
   position: relative
   overflow: hidden
 
+
+.alwayshidden
+  display: none !important
+
 .community
   border: 1px solid black
   background: white
