--- a/app/views/activities/_main_activity_content.html.haml
+++ b/app/views/activities/_main_activity_content.html.haml
@@ -10,13 +10,8 @@
       = image_tag filepicker_activity_hero_image(activity.image_id), alt: activity.title, title: activity.title
   - cache [activity, 'ingredients'] do
     - if activity.description?
-      .section.activity-description-wrapper
-        .activity-description#activity-description
-          :markdown
-            #{apply_shortcodes(activity.description)}
-          .activity-description-overlay
-        .text-center
-          = link_to 'more', 'javascript:void(0);', id: 'activity-description-maximize'
+      .section.activity-description-wrapper{data: {wysiwyg: "description"}}
+        = render 'show_description', activity: activity
     - if activity.ingredients.any?
       .section
         .activity-ingredients-list#full-ingredients-list.section{data: {target: ''}}
