--- a/app/views/activities/get_edit_partial.js.haml
+++ b/app/views/activities/get_edit_partial.js.haml
@@ -1,2 +1,2 @@
-//$('#all-pages').fadeOut('fast', function() { $(this).html("#{j render :partial => 'pages_thumbnail_list'}").fadeIn()})
-$('.activity-description-wrapper').fadeOut('fast', function() { $(this).html("#{j render :partial => 'edit_description'}").fadeIn()})
+$('.wysiwyg-available').fadeOut('fast', function() { $(this).html("#{j render :partial => 'edit_description'}").fadeIn()})
+$('.wysiwyg-available').removeClass('.wysiwyg-available').addClass('.wysiwyg-active')
