--- a/app/views/activities/_edit_description.html.haml
+++ b/app/views/activities/_edit_description.html.haml
@@ -1,2 +1,3 @@
-= semantic_form_for [@activity] do |f|
+= semantic_form_for [:admin, @activity] do |f|
   = f.input :description, label: false
+  = f.submit
