--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -39,7 +39,7 @@
           %i.icon-resize-full#show-all-icon
         .btn-circle{onclick: 'window.print()'}
           %i.icon-print
-        = link_to get_edit_partial_activity_path(@activity, ), method: :get, remote: true, class: 'btn-circle' do
+        %button{type: "button", class: "btn btn-primary btn-large", data: {toggle: "button"}, id: "edit-mode"}
           %i.icon-edit
       .pull-right.display-inline-fix
         = render 'layouts/social_buttons', media_object: @activity
