--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -975,6 +975,9 @@ h1, h2, h3, h4
   border-color: #9ecaed
   box-shadow: 0 0 10px #9ecaed
 
+#edit-mode.active
+  background: #0088cc
+
 // BELOW ARE RESPONSIVE STYLES //
 
 /* Large desktop */
