--- a/app/views/activities/_show_description.html.haml
+++ b/app/views/activities/_show_description.html.haml
@@ -1,6 +1,6 @@
 .activity-description#activity-description
   :markdown
-    #{apply_shortcodes(activity.description)}
+    #{apply_shortcodes(@activity.description)}
   .activity-description-overlay
 .text-center
   = link_to 'more', 'javascript:void(0);', id: 'activity-description-maximize'
