--- a/app/views/activities/_ingredient_row.haml
+++ b/app/views/activities/_ingredient_row.haml
@@ -1,15 +1,19 @@
 %tr.ingredient-item{data: {:'ingredient-id' => ingredient.ingredient.id}}
   %td.ingredient-title
-    - if ingredient.product_url?
-      =link_to ingredient.title.html_safe, ingredient.product_url, { class: ('for-sale-after' if ingredient.for_sale), target: "_blank"}
-    - elsif ingredient.sub_activity_id != nil
-      -subact = Activity.find_by_id(ingredient.sub_activity_id)
-      =link_to subact.title.html_safe, activity_path(subact), { target: "_blank", onclick: "addScalingToLink(this);"}
-    - else
-      - if ingredient.note?
-        = "#{ingredient.title.html_safe}, #{apply_shortcodes(ingredient.note).html_safe}"
+    .pull-left
+      - if ingredient.product_url?
+        =link_to ingredient.title.html_safe, ingredient.product_url, { class: ('for-sale-after' if ingredient.for_sale), target: "_blank"}
+      - elsif ingredient.sub_activity_id != nil
+        -subact = Activity.find_by_id(ingredient.sub_activity_id)
+        =link_to subact.title.html_safe, activity_path(subact), { target: "_blank", onclick: "addScalingToLink(this);"}
       - else
+        / - if ingredient.note?
+        /   = "#{ingredient.title.html_safe}, #{apply_shortcodes(ingredient.note).html_safe}"
+        / - else
         = ingredient.title.html_safe
+    - if ingredient.note?
+      .pull-left
+        = ", #{apply_shortcodes(ingredient.note).html_safe}"
   %td
     .prependable
   %td.quantity-group.qtyfade
