--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,6 +9,7 @@
     %meta{name: 'description', content: yield(:description)}
     %meta{name: 'keywords', content: yield(:keywords)}
     %meta{name: 'viewport', content: 'width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1'}
+    = yield :facebook_og
     / YouTube Iframe API can't be loaded async so we have to load it directly
     %script{src:'http://www.youtube.com/iframe_api'}
     = auto_discovery_link_tag :atom, feed_path
