--- a/app/views/activities/get_edit_partial.js.haml
+++ b/app/views/activities/get_edit_partial.js.haml
@@ -1,2 +1,3 @@
 $('.wysiwyg-available').fadeOut('fast', function() { $(this).html("#{j render :partial => 'edit_' + partial_name}").fadeIn()})
 $('.wysiwyg-available').removeClass('wysiwyg-available').addClass('wysiwyg-active')
+setupFilepickerDropPanes()
