--- a/app/views/activities/_main_activity_content.html.haml
+++ b/app/views/activities/_main_activity_content.html.haml
@@ -1,13 +1,6 @@
 .span6.section#video-ingredient-unit
-  .video-container{:itemscope => true, :itemprop => "video", :itemtype => "http://schema.org/VideoObject"}
-    - if activity.youtube_id?
-      .noprint
-        - if params[:autoplay]
-          %iframe{src: youtube_url(activity.youtube_id, 1)}
-        - else
-          %iframe{src: youtube_url(activity.youtube_id)}
-    - elsif activity.image_id?
-      = image_tag filepicker_activity_hero_image(activity.image_id), alt: activity.title, title: activity.title
+  .video-container{data: {wysiwyg: "hero_visual"}, :itemscope => true, :itemprop => "video", :itemtype => "http://schema.org/VideoObject"}
+    = render 'show_hero_visual', activity: activity
   - cache [activity, 'ingredients'] do
     - if activity.description?
       .section.activity-description-wrapper{data: {wysiwyg: "description"}}
