--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -1,3 +1,5 @@
+= render 'layouts/filepicker'
+
 - content_for :title, @activity.title.html_safe
 - content_for :description, @activity.description != "" ? @activity.description.html_safe : @activity.title.html_safe
 - content_for :canonical_link, activity_url(@activity)
