admin updates for hiding number

--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -286,6 +286,9 @@ body.admin_namespace
       padding: 10px
       box-sizing: border-box
 
+    input[type='checkbox']
+      width: inherit
+
     .nav-pills, .nav-tabs
       a
         text-decoration: none
