--- a/app/views/activities/_main_activity_content.html.haml
+++ b/app/views/activities/_main_activity_content.html.haml
@@ -50,10 +50,14 @@
   .span6.section.scroll-shadow-wrapper
     .ordered-steps.scroll-shadow{:itemprop => "recipeInstructions"}
       .scroll-shadow-content.pull-left
-        - activity.steps.each_with_index do |step, index|
+        - step_number = 0
+        - activity.steps.each_with_index do |step,index|
           .ordered-step-item{id: "order-step-item-#{index}"}
             .step-element.step-number
-              = index + 1
+              - if step.hide_number?
+                - step_number
+              - else
+                = step_number+=1
             .step-element.step-content
               - if step.title?
                 %h4= step.title
