--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -304,7 +304,7 @@ h1, h2, h3, h4
   .ordered-step-item
     width: 100%
     float: left
-    padding: 10px 0px
+    padding: 0px
     border: 1px solid $offwhite
     border-bottom: 1px solid $light-gray
     @include boxsizing
@@ -318,16 +318,21 @@ h1, h2, h3, h4
       width: 10%
       text-align: center
       font-size: 30px
-      line-height: 40px
+      line-height: 30px
+      padding-top: 20px
     .step-content
       width: 90%
+      padding: 20px 10px 10px 5px
       h4
         margin-top: 0px
         margin-bottom: 0px
+        padding-bottom: 5px
       ul, li
         list-style: none
-        padding: 5px 0px
+        padding: 0px 0px 10px 0px
         margin: 0px
+      ul
+        padding: 0px
     .step-actions
       margin-bottom: 10px
       .step-action-item
