--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -382,4 +382,37 @@ li
       border: none
       box-shadow: none
 
+.admin-activity-versions
+  #urls
+    display: none
+
+  .preview-group
+    width: 28%
+    float: left
+
+    .controls
+      select
+        width: auto
+        margin-top: 6px
+        font-size: 95%
+
+      .loading-indicator
+        margin-top: 8px
+        display: inline-block
+
+      > *
+        margin-right: 5px
+
+    .preview
+      width: 100%
+      height: 1000px
+      border: 1px solid #dcdcdc
+
+  #right-group, #diff-group
+    margin-left: 4%
+
+  #preview-diff
+    padding: 10px
+    text-align: top
+
 
