--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -39,6 +39,8 @@
         .container
           = yield :bottom
 
+    = yield :popup_bottom
+
     = yield :footer
   / = render 'layouts/youtube'
   
