--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -21,8 +21,6 @@
     .span6.relative
       %h1.activity-title{itemprop: 'name'}
         = @activity.title.html_safe
-      = @viewed_activities.count
-      = @viewed_activities.inspect
       / - if @activity.is_recipe?
       /   .activity-action-btn
       /     = form_for @user_activity do |f|
@@ -111,3 +109,19 @@
       %h3= @course.title
     .modal-body
       = course_syllabus(@course)
+
+- content_for :popup_bottom do
+  - if @viewed_activities.count > 3
+    .container-fluid#popup-bottom
+      .row-fluid
+        .container
+          .row
+            .span12
+              .row
+                .span6
+                  %h3 Join the community
+                  Let's help eachother become better cooks.
+                .span6
+                  = form_tag sign_up_url, :method => :get do
+                    = email_field_tag 'email', nil, {class: 'input-signup-email', placeholder: 'Enter email', required: true}
+                    = submit_tag 'Sign Up Now', class: 'btn btn-primary', id: 'subscribe-email'
