--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -82,7 +82,7 @@
       .span4.signup-box
         .well
           %h3 Join The Community!
-          = form_tag sign_up_url, :method => :get do
+          = form_tag sign_up_url, :method => :get, class: 'form-inline' do
             %p= email_field_tag 'email', nil, {class: 'input-signup-email', placeholder: 'Enter email', required: true}
             %p= submit_tag 'Sign Up Now', class: 'btn btn-primary btn-large btn-block', id: 'subscribe-email'
 
