--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -112,7 +112,7 @@
 
 - content_for :popup_bottom do
   - if @viewed_activities.count > 3
-    .container-fluid#popup-bottom
+    .container-fluid.popup-bottom
       .row-fluid
         .container
           .row
