--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -70,6 +70,15 @@ $offwhite: #F2F2F2
     .input-signup-email
       margin: 0px
 
+  .popup-bottom-close
+    position: absolute
+    top: 10px
+    right: 10px
+    font-size: 20px
+    &:hover
+      color: $dark-orange
+      cursor: pointer
+
 .popup-bottom-show
   bottom: 0px
 
