--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -125,3 +125,5 @@
                   = form_tag sign_up_url, :method => :get do
                     = email_field_tag 'email', nil, {class: 'input-signup-email', placeholder: 'Enter email', required: true}
                     = submit_tag 'Sign Up Now', class: 'btn btn-primary', id: 'subscribe-email'
+                .popup-bottom-close
+                  %i.icon-remove
