--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -387,7 +387,7 @@ li
     display: none
 
   .preview-group
-    width: 28%
+    width: 32%
     float: left
 
     .controls
@@ -399,17 +399,26 @@ li
       .loading-indicator
         margin-top: 8px
         display: inline-block
+      .diff-label
+        display: inline-block
 
       > *
         margin-right: 5px
 
     .preview
       width: 100%
-      height: 1000px
       border: 1px solid #dcdcdc
 
+      pre
+        background: none
+        border:  none
+        margin:  none
+
+    iframe.preview
+      height: 1500px
+
   #right-group, #diff-group
-    margin-left: 4%
+    margin-left: 20px
 
   #preview-diff
     padding: 10px
