--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -65,7 +65,6 @@ $offwhite: #F2F2F2
   h3
     margin: 0px
   form
-    float: right
     margin: 10px 0px
     .input-signup-email
       margin: 0px
@@ -1099,6 +1098,8 @@ h1, h2, h3, h4
   .popup-bottom
     margin: 0px -20px
     padding: 20px
+    .text-right
+      text-align: left
 
   #footer
     margin: 0px -20px
