--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -118,7 +118,7 @@
           .row
             .span12
               .row
-                .span6
+                .span6.text-right
                   %h3 Join the community
                   Let's help eachother become better cooks.
                 .span6
