--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -111,7 +111,7 @@
       = course_syllabus(@course)
 
 - content_for :popup_bottom do
-  - if @viewed_activities.count > 3
+  - if @viewed_activities.count > 3 && current_user.nil?
     .container-fluid.popup-bottom
       .row-fluid
         .container
@@ -120,7 +120,7 @@
               .row
                 .span6.text-right
                   %h3 Join the community
-                  Let's help eachother become better cooks.
+                  Let's help each other become better cooks.
                 .span6
                   = form_tag sign_up_url, :method => :get do
                     = email_field_tag 'email', nil, {class: 'input-signup-email', placeholder: 'Enter email', required: true}
