--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -31,76 +31,80 @@
       /         .btn-text
       /           cooked this
     .span6.noprint
-      .pull-left.display-inline-fix
-        - if @course
-          .btn-circle{data: {toggle: 'modal', target: '#syllabus-modal'}}
-            %i.icon-file-alt
-          - prev_activity = @course.prev_published_activity(@activity)
-          - next_activity = @course.next_published_activity(@activity)
-          - if prev_activity
-            = link_to course_activity_path(@course, prev_activity), class: 'btn-circle' do
-              %i.icon-chevron-left
-          - if next_activity
-            = link_to course_activity_path(@course, next_activity), class: 'btn-circle' do
-              %i.icon-chevron-right
-        .btn-circle#show-all
-          %i.icon-resize-full#show-all-icon
-        .btn-circle{onclick: 'window.print()'}
-          %i.icon-print
-      .pull-right.display-inline-fix
-        = render 'layouts/social_buttons', media_object: @activity
+      - if ! @minimal
+        .pull-left.display-inline-fix
+          - if @course
+            .btn-circle{data: {toggle: 'modal', target: '#syllabus-modal'}}
+              %i.icon-file-alt
+            - prev_activity = @course.prev_published_activity(@activity)
+            - next_activity = @course.next_published_activity(@activity)
+            - if prev_activity
+              = link_to course_activity_path(@course, prev_activity), class: 'btn-circle' do
+                %i.icon-chevron-left
+            - if next_activity
+              = link_to course_activity_path(@course, next_activity), class: 'btn-circle' do
+                %i.icon-chevron-right
+          .btn-circle#show-all
+            %i.icon-resize-full#show-all-icon
+          .btn-circle{onclick: 'window.print()'}
+            %i.icon-print
+        .pull-right.display-inline-fix
+          = render 'layouts/social_buttons', media_object: @activity
 
   .row.printable.printable-column
     .span12
       .row#main-content
         = render 'main_activity_content', activity: @activity
-        .span6.community.noprint.hide
-          .community-toggle
-            .btn.btn-primary
-              %i.icon-comments Community
-          .community-content
-            %h4 Salmon and albumin
-            %blockquote
-              %p My family really only like salmon cooked sous-vide in oil, we also don't really have much access to good seafood in Denver unless you pay an arm and a leg.
-              %p I've done quite a bit at 50C as well as much shorter cook time at 57.5C. Is brining the best way to get rid of the albumin, if so is a typical 6.4% brine what should be used? And for how long?
-              %small
-                %cite
-                  Johan Edstrom
-            %blockquote
-              %p So-called albumin protein is mostly a function of cooking temperature more than anything else. Worth trying 113 °F / 45 °C to see what you think of that temperature, you will certainly see less albumin percolating to the surface of the flesh.
-              %p Adding salt via a brine tends to help retain juices in the flesh—for complex reasons that I hope to explore in a future course—and so at any given temperature you'll see less juice percolate to the surface, which means you'll see less albumin.
-              %p Have you checked out the salmon 104 °F recipe on our course page?
-              %small
-                %cite
-                  Chris Young
+        - if ! @minimal
+          .span6.community.noprint.hide
+            .community-toggle
+              .btn.btn-primary
+                %i.icon-comments Community
+            .community-content
+              %h4 Salmon and albumin
+              %blockquote
+                %p My family really only like salmon cooked sous-vide in oil, we also don't really have much access to good seafood in Denver unless you pay an arm and a leg.
+                %p I've done quite a bit at 50C as well as much shorter cook time at 57.5C. Is brining the best way to get rid of the albumin, if so is a typical 6.4% brine what should be used? And for how long?
+                %small
+                  %cite
+                    Johan Edstrom
+              %blockquote
+                %p So-called albumin protein is mostly a function of cooking temperature more than anything else. Worth trying 113 °F / 45 °C to see what you think of that temperature, you will certainly see less albumin percolating to the surface of the flesh.
+                %p Adding salt via a brine tends to help retain juices in the flesh—for complex reasons that I hope to explore in a future course—and so at any given temperature you'll see less juice percolate to the surface, which means you'll see less albumin.
+                %p Have you checked out the salmon 104 °F recipe on our course page?
+                %small
+                  %cite
+                    Chris Young
 
-            %blockquote
-              %p I love Salmon, Sushi first!! :)  I have always Cedar Planked my salmon and have love the results. Now that I have seen the 104F video, I am going to have to give it a try.
-              %small
-                %cite
-                  Allen Johnson
-            %blockquote
-              %p @Johan, 43C is my favourite temp too, as 40C is barely warm once it gets served. Have the same problem in UK too with fish, salmon is great, but good seafood here costs a bomb!
-              %small
-                %cite
-                  Grace
+              %blockquote
+                %p I love Salmon, Sushi first!! :)  I have always Cedar Planked my salmon and have love the results. Now that I have seen the 104F video, I am going to have to give it a try.
+                %small
+                  %cite
+                    Allen Johnson
+              %blockquote
+                %p @Johan, 43C is my favourite temp too, as 40C is barely warm once it gets served. Have the same problem in UK too with fish, salmon is great, but good seafood here costs a bomb!
+                %small
+                  %cite
+                    Grace
 
 - content_for :bottom do
-  .row
-    .span12
-      %h3 Techniques
-      #technique-carousel
-        = render 'shared/horizontal_scroller', items: @techniques
-      %h3 Recipes
-      #related-carousel
-        = render 'shared/horizontal_scroller', items: @recipes
+  - if ! @minimal
 
-  .row
-    .span12
-      %h3 Discussion
-      .section
-        - disqus_id = "activity-#{@activity.id}"
-        = render 'layouts/disqus_comments', disqus_id: disqus_id, disqus_title: @activity.title, disqus_url: activity_url(@activity)
+    .row
+      .span12
+        %h3 Techniques
+        #technique-carousel
+          = render 'shared/horizontal_scroller', items: @techniques
+        %h3 Recipes
+        #related-carousel
+          = render 'shared/horizontal_scroller', items: @recipes
+
+    .row
+      .span12
+        %h3 Discussion
+        .section
+          - disqus_id = "activity-#{@activity.id}"
+          = render 'layouts/disqus_comments', disqus_id: disqus_id, disqus_title: @activity.title, disqus_url: activity_url(@activity)
 
 - if @course
   .modal.hide.fade#syllabus-modal
