--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -425,3 +425,46 @@ li
     text-align: top
 
 
+table.diff
+  border-collapse: collapse
+  border: 1px solid darkgray
+  white-space: pre-wrap
+  tbody
+    font-family: Courier, monospace
+    th
+      font-family: verdana,arial,'Bitstream Vera Sans',helvetica,sans-serif
+      background: #EED
+      font-size: 11px
+      font-weight: normal
+      border: 1px solid #BBC
+      color: #886
+      padding: .3em .5em .1em 2em
+      text-align: right
+      vertical-align: top
+  thead
+    border-bottom: 1px solid #BBC
+    background: #EFEFEF
+    font-family: Verdana
+    th.texttitle
+      text-align: left
+  tbody td
+    padding: 0px .4em
+    padding-top: .4em
+    vertical-align: top
+  .empty
+    background-color: #DDD
+  .replace
+    background-color: #ffdd88
+  .delete
+    background-color: #E99
+  .skip
+    background-color: #EFEFEF
+    border: 1px solid #AAA
+    border-right: 1px solid #BBC
+  .insert
+    background-color: #99ee99
+  th.author
+    text-align: right
+    border-top: 1px solid #BBC
+    background: #efefef
+
