--- a/app/views/admin/activities/versions.html.haml
+++ b/app/views/admin/activities/versions.html.haml
@@ -7,7 +7,7 @@
       .loading-indicator#loading-left.pull-right
         %i.icon-spinner.icon-spin.icon-2x
 
-    %iframe.preview#preview-left{src: activity_path(@activity, version: @versions[0].last)}
+    %iframe.preview#preview-left{src: activity_path(@activity, version: @versions[0].last, minimal: true)}
 
   .preview-group#right-group
     .controls
@@ -16,17 +16,13 @@
       .loading-indicator#loading-right.pull-right
         %i.icon-spinner.icon-spin.icon-2x
 
-    %iframe.preview#preview-right{src: activity_path(@activity, version: @versions[1].last)}
+    %iframe.preview#preview-right{src: activity_path(@activity, version: @versions[1].last, minimal: true)}
 
   .preview-group#diff-group
 
     .controls
       .diff-label
         %h3 Difference
-      .loading-indicator#loading-diff.pull-right
-        %i.icon-spinner.icon-spin.icon-2x
-    .preview
-      %pre#preview-diff
+    .preview#preview-diff
 
-
-  #urls{data: {:'activity_path' => activity_path(@activity), :'restore_version_admin_activity_path' => restore_version_admin_activity_path(@activity), :'get_diff_admin_activity_path' => get_diff_admin_activity_path(@activity)}}
+  #urls{data: {:'activity_path' => activity_path(@activity, minimal: true), :'restore_version_admin_activity_path' => restore_version_admin_activity_path(@activity), :'get_diff_admin_activity_path' => get_diff_admin_activity_path(@activity)}}
