activities controller and template updates

--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -111,7 +111,7 @@
       = course_syllabus(@course)
 
 - content_for :popup_bottom do
-  - if @viewed_activities.count > 3 && current_user.nil?
+  - if @viewed_activities && @viewed_activities.count > 3 && current_user.nil?
     .container-fluid.popup-bottom
       .row-fluid
         .container
