forum filepicker fix

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -5,11 +5,8 @@
 %script{src: "//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"}
 = render 'layouts/filepicker'
 = stylesheet_link_tag 'global_navigation', media: 'all'
-= javascript_include_tag 'forum_filepicker', media: 'all'
 = render 'layouts/navigation', external: true
 
-
-/ Code below is just used to replicate the forum environment to test filepicker
 / %div{style: "margin-top: 200px;"}
 /   .cleditorButton{title: 'Insert Image'}
 /     Insert Image
@@ -17,3 +14,27 @@
 / .cleditorMain
 /   %iframe
 /     %body
+:javascript
+  $(function() {
+    return $(document).on("click", ".cleditorButton", function(event) {
+      var doc,
+        _this = this;
+      if ($(this).attr('title') === 'Insert Image') {
+        event.preventDefault();
+        doc = $('.cleditorMain').find('iframe')[0].contentWindow.document;
+        return filepicker.pickAndStore({
+          mimetype: "image/*"
+        }, {
+          location: "S3"
+        }, function(fpfiles) {
+          var content, convert, url, url_with_conversion;
+          console.log(JSON.stringify(fpfiles));
+          url = JSON.stringify(fpfiles[0]['url']);
+          convert = "/convert?fit=max&w=400";
+          url_with_conversion = JSON.parse(url) + convert;
+          content = "<img src='" + url_with_conversion + "'/>";
+          return $(doc).find('body').append(content);
+        });
+      }
+    });
+  });
