forum filepicker fix

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -4,6 +4,7 @@
 %script{src: "//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"}
 %script{src: "//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"}
 = render 'layouts/filepicker'
+= render 'layouts/forum_filepicker'
 = stylesheet_link_tag 'global_navigation', media: 'all'
 = render 'layouts/navigation', external: true
 
@@ -14,27 +15,3 @@
 / .cleditorMain
 /   %iframe
 /     %body
-:javascript
-  $(function() {
-    return $(document).on("click", ".cleditorButton", function(event) {
-      var doc,
-        _this = this;
-      if ($(this).attr('title') === 'Insert Image') {
-        event.preventDefault();
-        doc = $('.cleditorMain').find('iframe')[0].contentWindow.document;
-        return filepicker.pickAndStore({
-          mimetype: "image/*"
-        }, {
-          location: "S3"
-        }, function(fpfiles) {
-          var content, convert, url, url_with_conversion;
-          console.log(JSON.stringify(fpfiles));
-          url = JSON.stringify(fpfiles[0]['url']);
-          convert = "/convert?fit=max&w=400";
-          url_with_conversion = JSON.parse(url) + convert;
-          content = "<img src='" + url_with_conversion + "'/>";
-          return $(doc).find('body').append(content);
-        });
-      }
-    });
-  });
