--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -3,8 +3,8 @@
 %link{href: "http://fonts.googleapis.com/css?family=Raleway:200,400,500,600,700", rel: "stylesheet", type: "text/css"}
 %script{src: "//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"}
 %script{src: "//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"}
-= render 'layouts/filepicker'
-= render 'layouts/forum_filepicker'
+= render 'layouts/filepicker', external:  true
+= render 'layouts/forum_filepicker', external: true
 = stylesheet_link_tag 'global_navigation', media: 'all'
 = render 'layouts/navigation', external: true
 
