forum filepicker fix

--- a/app/assets/javascripts/navigation_bootstrap.js.coffee.erb
+++ b/app/assets/javascripts/navigation_bootstrap.js.coffee.erb
@@ -27,3 +27,17 @@ class ChefSteps.NavigationBootstrap
     @getHeader()
     @fixNavLinks()
 
+$ ->
+  filepicker.setKey('<%= ::Rails.application.config.filepicker_rails.api_key %>')
+  $(document).on "click", ".cleditorButton", (event) ->
+    if $(this).attr('title') == 'Insert Image'
+      event.preventDefault()
+      doc = $('.cleditorMain').find('iframe')[0].contentWindow.document
+
+      filepicker.pickAndStore {mimetype:"image/*"}, {location:"S3"}, (fpfiles) =>
+        console.log(JSON.stringify(fpfiles))
+        url = JSON.stringify(fpfiles[0]['url'])
+        convert = "/convert?fit=max&w=400"
+        url_with_conversion = JSON.parse(url) + convert
+        content = "<img src='" + url_with_conversion + "'/>"
+        $(doc).find('body').append(content)
