--- a/app/views/layouts/_forum_filepicker.html.erb
+++ b/app/views/layouts/_forum_filepicker.html.erb
@@ -1,25 +1,23 @@
 <script type="text/javascript">
   $(function() {
-    return $(document).on("click", ".cleditorButton", function(event) {
+    return $(document).on("click", ".cleditorButton[title='Insert Image']", function(event) {
       var doc,
-        _this = this;
-      if ($(this).attr('title') === 'Insert Image') {
-        event.preventDefault();
-        doc = $('.cleditorMain').find('iframe')[0].contentWindow.document;
-        return filepicker.pickAndStore({
-          mimetype: "image/*"
-        }, {
-          location: "S3"
-        }, function(fpfiles) {
-          var content, convert, url, url_with_conversion;
-          console.log(JSON.stringify(fpfiles));
-          url = JSON.stringify(fpfiles[0]['url']);
-          convert = "/convert?fit=max&w=400";
-          url_with_conversion = JSON.parse(url) + convert;
-          content = "<img src='" + url_with_conversion + "'/>";
-          return $(doc).find('body').append(content);
-        });
-      }
+      _this = this;
+      event.preventDefault();
+      doc = $('.cleditorMain').find('iframe')[0].contentWindow.document;
+      return filepicker.pickAndStore({
+        mimetype: "image/*"
+      }, {
+        location: "S3"
+      }, function(fpfiles) {
+        var content, convert, url, url_with_conversion;
+        console.log(JSON.stringify(fpfiles));
+        url = JSON.stringify(fpfiles[0]['url']);
+        convert = "/convert?fit=max&w=400";
+        url_with_conversion = JSON.parse(url) + convert;
+        content = "<img src='" + url_with_conversion + "'/>";
+        return $(doc).find('body').append(content);
+      });
     });
   });
 </script>
