--- a/app/views/courses/spherification.html.haml
+++ b/app/views/courses/spherification.html.haml
@@ -1,1 +1,25 @@
-%h1= @course.title
+- content_for :title, course.title
+- content_for :description, course.short_description
+
+.row
+  .span12
+    %h1= course.title
+
+    .well
+      %h2 Intro Video
+
+    %button.btn.btn-primary.btn-large.pull-right
+      Enroll Now
+.row.section
+  .span12
+    .row
+      .span4.well
+        %h3 Good
+      .span4.well
+        %h3 Better
+      .span4.well
+        %h3 Best
+
+.section
+  = render 'layouts/disqus_comments', disqus_id: "course-#{course.id}", disqus_title:course.title, disqus_url: course_url
+
