--- a/app/views/courses/spherification.html.haml
+++ b/app/views/courses/spherification.html.haml
@@ -8,8 +8,12 @@
     .well
       %h2 Intro Video
 
-    %button.btn.btn-primary.btn-large.pull-right
-      Enroll Now
+    - if current_user && current_user.course_ids.include?(@course.id)
+      You are enrolled into this course.
+      = link_to 'First activity', '#', class: 'btn btn-primary btn-large pull-right'
+    - else
+      = form_tag enroll_course_path(@course) do
+        = submit_tag 'Enroll', class: 'btn btn-primary btn-large pull-right'
 .row.section
   .span12
     .row
