forum photo upload using a seperate s3 bucket

--- a/app/assets/javascripts/navigation_bootstrap.js.coffee.erb
+++ b/app/assets/javascripts/navigation_bootstrap.js.coffee.erb
@@ -28,7 +28,7 @@ class ChefSteps.NavigationBootstrap
     @fixNavLinks()
 
 $ ->
-  filepicker.setKey('<%= ::Rails.application.config.filepicker_rails.api_key %>')
+  filepicker.setKey('Ad8qmyXRSpy36YcW4CINQz')
   $(document).on "click", ".forum-filepicker", (event) ->
     event.preventDefault()
     doc = $('.cleditorMain').find('iframe')[0].contentWindow.document
