add mixin and media object css

--- a/app/views/home/new_visitor_homepage.html.haml
+++ b/app/views/home/new_visitor_homepage.html.haml
@@ -13,4 +13,5 @@
   .span12
     %h2.text-center We offer a variety of cooking courses...
     - @courses.each do |course|
-      = course.title
+      .media-box
+        = course.title
